Added search by city, name and club
