# user-service/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20210424192021) do
+ActiveRecord::Schema.define(version: 20210514000817) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -106,6 +106,9 @@ ActiveRecord::Schema.define(version: 20210424192021) do
     t.string  "phone"
     t.string  "address"
     t.integer "tt_profile_id"
+    t.string  "city"
+    t.string  "zipcode"
+    t.string  "club"
     t.index ["email"], name: "index_users_on_email", unique: true, using: :btree
     t.index ["tt_profile_id"], name: "index_users_on_tt_profile_id", using: :btree
   end
